--- a/package.json
+++ b/package.json
@@ -4,25 +4,15 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check test:watch start-mockapi open:src lint:watch",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
     "open:src": "babel-node buildScripts/srcServer.js",
-    "lint": "esw webpack.config.* src buildScripts --color",
-    "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "rimraf ./dist",
-    "build:html": "babel-node buildScripts/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist test lint build:html",
-    "build": "babel-node buildScripts/build.js",
-    "postbuild": "babel-node buildScripts/distServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
-    "share": "npm-run-all --parallel open:src localtunnel",
-    "deploy": "surge ./dist --domain fuelcalc.surge.sh",
-    "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
-    "generate-mock-data": "babel-node buildScripts/generateMockData"
+    "share": "npm-run-all --paralel open:src localtunnel",
+    "lint": "esw webpack.config.*, src, buildScripts --color",
+    "lint:watch": "yarn run lint -- --watch",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "yarn run test -- --watch" 
   },
   "author": "Cory House",
   "license": "MIT",
@@ -55,7 +45,7 @@
     "mocha": "3.1.0",
     "nock": "8.0.0",
     "npm-run-all": "3.1.0",
-    "nsp": "2.6.1",
+    "nsp": "^2.6.2",
     "open": "0.0.5",
     "rimraf": "2.5.4",
     "style-loader": "^0.13.1",
